[fix, refactor] 피드백 관련 코드 구현 및 수정 [desc] 1. ticket 에 취소여부 추가 2. 예약시 동시성 테스트 추가 3. seat 조회 검증 추가